Revision history for Perl module Tree::DAG_Node.

1.33  2025-03-20T11:16:00
	- Replace the discouraged File::Slurp::Tiny with File::Slurper.
		Thanx to Marcel Telka for the report.
		But why not use File::Slurp? Because...
		https://blogs.perl.org/users/leon_timmermans/2015/08/fileslurp-is-broken-and-wrong.html
	- Add a security policy file SECURITY.md

1.32  2021-02-01T15:56:00
	- Update Makefile.PL and POD to change RT to github.

1.31  2018-02-14T09:08:00
	- Clarify licence issue by changing the reference in the DAG_Node.pm file from Artistic V 2
		to Perl, so it now matches what I preemptively put in Makefile.PL and the LICENSE file.
		Sean Burke has kindly agreed to this change.
		$thanx x $many to Gregor Herrmann (Debian Perl Group) for reporting this via github.

1.30  2018-01-26T15:32:00
	- Explicitly escape { and } in a regexp because unescaped { issues a warning now and will become
		a fatal error in Perl V 5.32.
	- Adopt new repo structure. See
		http://savage.net.au/Ron/html/My.Workflow.for.Building.Distros.html.

1.29  2016-03-01T13:39:00
	- After another email exchange with Kent Fredric (via RT) and Karen Etheridge (via the
		cpan-testers-discuss mailing list), I've edited Makefile.PL, again, to indicate that
		Test::Pod is needed neither for building nor testing this module, but is only needed for
		development. Specifically, it's used by xt/author/pod.t, and not elsewhere. See
		https://metacpan.org/pod/CPAN::Meta::Spec#PREREQUISITES for more details.

1.28  2016-03-01T08:43:00
	- No code changes.
	- Rework Makefile.PL so File::Spec, File::Temp, Test::More and Test::Pod are in TEST_REQUIRES.
		Many thanx to Kent Fredric in RT#112568 for this suggestion.
	- Expand the SYNOPSIS.
	- Update MANIFEST.SKIP to include .gitignore.
	- Finally add lightweight git tags to distros, so that if you have a Bash alias such as:
		alias gl='git log --decorate=full' you'll see something like these 5 lines: