@@ -29,11 +29,13 @@ my(%params) =
 	PL_FILES	=> {},
 	PREREQ_PM	=>
 	{
-		'File::Slurper'	=> 0.014,
-		'open'			=> 0,
-		'strict'		=> 0,
-		'utf8'			=> 0,
-		'warnings'		=> 0,
+		'ExtUtils::MakeMaker'	=> 7.70,
+		'File::Slurper'			=> 0.014,
+		'open'					=> 0,
+		'perl'					=> 0,
+		'strict'				=> 0,
+		'utf8'					=> 0,
+		'warnings'				=> 0,
 	},
 	TEST_REQUIRES =>
 	{
